--- a/DutchTreat/Views/App/Index.cshtml
+++ b/DutchTreat/Views/App/Index.cshtml
@@ -1,13 +1,17 @@
-﻿<!DOCTYPE html>
+﻿@{
+    ViewBag.Title = "Home Page";
+}
+
+<!DOCTYPE html>
 <html>
 <head>
-    <title>My Site Treat</title>
-    <link href="css/site.css" rel="stylesheet" />
+    <title>My Site Treat - @ViewBag.Title</title>
+    <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <h2>My Site Treat</h2>
+    <h2>@ViewBag.Title</h2>
     <div class="product-info">
-        <img src="/img/VanGogh.jpg"/>
+        <img src="~/img/VanGogh.jpg" />
         <h3>Mug</h3>
         <ul class="product-props">
             <li>Price: $9.99</li>
@@ -49,10 +53,10 @@
             </div>
             <div>
                 <label>Password</label>
-                <input type="password"/>
+                <input type="password" />
             </div>
             <div>
-                <input type="checkbox"/>
+                <input type="checkbox" />
                 <label>Remember Me?</label>
             </div>
             <div>
@@ -60,10 +64,8 @@
             </div>
         </form>
     </div>
-
-
-
-    <script src="lib/jquery/dist/jquery.min.js"></script>
-    <script src="js/index.js"></script>
+    
+    <script src="~/lib/jQuery/dist/jquery.min.js"></script>
+    <script src="~/js/index.js"></script>
 </body>
 </html>
