--- a/AnaSProject/Views/Shared/_Layout.cshtml
+++ b/AnaSProject/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
         <h2>@ViewBag.Title</h2>
         @RenderBody()    
     </section>
-    <footer>Copyright 2017 AALC</footer>
+    <footer>Copyright 2017 <a href="mailto:alanlopcu@gmail.com">AALC</a></footer>
 
     <script src="~/lib/jQuery/dist/jquery.min.js"></script>
     <script src="~/js/index.js"></script>
