--- a/AnaSProject/Views/App/Contact.cshtml
+++ b/AnaSProject/Views/App/Contact.cshtml
@@ -1,1 +1,22 @@
-﻿<h2>@ViewBag.Title</h2>
+﻿@{ 
+    ViewBag.Title = "Contact Me";
+}
+<form method="post">
+    <label>Fullname:</label>
+    <br />
+    <input name="name"/>
+    <br />
+    <label>E-mail:</label>
+    <br />
+    <input type="email" name="email"/>
+    <br />
+    <label>Subject:</label>
+    <br />
+    <input name="subject"/>
+    <br />
+    <label>Message:</label>
+    <br />
+    <textarea rows="4" name="message"></textarea>
+    <br />
+    <input type="submit" value="Send Message" />
+</form>
