--- a/AnaSProject/Views/App/Contact.cshtml
+++ b/AnaSProject/Views/App/Contact.cshtml
@@ -1,22 +1,23 @@
-﻿@{ 
+﻿@model ContactViewModel
+@{ 
     ViewBag.Title = "Contact Me";
 }
 <form method="post">
-    <label>Fullname:</label>
+    <label asp-for="Name">Fullname:</label>
     <br />
-    <input name="name"/>
+    <input asp-for="Name"/>
     <br />
-    <label>E-mail:</label>
+    <label asp-for="Email">E-mail:</label>
     <br />
-    <input type="email" name="email"/>
+    <input type="email" asp-for="Email"/>
     <br />
-    <label>Subject:</label>
+    <label asp-for="Subject">Subject:</label>
     <br />
-    <input name="subject"/>
+    <input asp-for="Subject"/>
     <br />
-    <label>Message:</label>
+    <label asp-for="Message">Message:</label>
     <br />
-    <textarea rows="4" name="message"></textarea>
+    <textarea rows="4" asp-for="Message"></textarea>
     <br />
     <input type="submit" value="Send Message" />
 </form>
