--- a/AnaSProject/Views/App/Contact.cshtml
+++ b/AnaSProject/Views/App/Contact.cshtml
@@ -7,27 +7,35 @@
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 }
 
-<form method="post">
-    @*<div asp-validation-summary="All"></div>*@
-    <div asp-validation-summary="ModelOnly"></div>
-    <label asp-for="Name">Fullname:</label>
-    <br />
-    <input asp-for="Name"/>
-    <span asp-validation-for="Name"></span>
-    <br />
-    <label asp-for="Email">E-mail:</label>
-    <br />
-    <input type="email" asp-for="Email"/>
-    <span asp-validation-for="Email"></span>
-    <br />
-    <label asp-for="Subject">Subject:</label>
-    <br />
-    <input asp-for="Subject"/>
-    <span asp-validation-for="Subject"></span>
-    <br />
-    <label asp-for="Message">Message:</label>
-    <br />
-    <textarea rows="4" asp-for="Message"></textarea>
-    <br />
-    <input type="submit" value="Send Message" />
-</form>
+<div class="col-md-6 col-md-offset-3">
+    <div class="well">
+        <form method="post">
+            @*<div asp-validation-summary="All"></div>*@
+            <div asp-validation-summary="ModelOnly"></div>
+            <div class="form-group">
+                <label asp-for="Name">Fullname:</label>
+                <input asp-for="Name" class="form-control"/>
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email">E-mail:</label>
+                <input type="email" asp-for="Email" class="form-control"/>
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Subject">Subject:</label>
+                <input asp-for="Subject" class="form-control"/>
+                <span asp-validation-for="Subject" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Message">Message:</label>
+                <textarea rows="4" asp-for="Message" class="form-control"></textarea>
+                <span asp-validation-for="Message" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Send Message" class="btn btn-primary"/>
+                <div class="text-success">@ViewBag.UserMessage</div>
+            </div>
+        </form>
+    </div>
+</div>
