--- a/AnaSProject/Views/App/Index.cshtml
+++ b/AnaSProject/Views/App/Index.cshtml
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="product-info">
-            <img src="~/img/VanGogh.jpg" />
+            <img src="~/img/lifetime.jpg" />
             <h3>Mug</h3>
             <ul class="product-props">
                 <li>Price: $9.99</li>
