Create database context, Seed my database for his firstime use & playing with repository pattern

--- a/AnaSProject/Views/Shared/_Layout.cshtml
+++ b/AnaSProject/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>My Site Treat - @ViewBag.Title</title>
+    <title>My AnaS Assessment - @ViewBag.Title</title>
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
