--- a/AnaSProject/Views/App/Index.cshtml
+++ b/AnaSProject/Views/App/Index.cshtml
@@ -1,16 +1,16 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Assessment Presentation";
 }
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-12">
         <div class="product-info">
             <img src="~/img/lifetime.jpg" />
             <h3>Mug</h3>
             <ul class="product-props">
-                <li>Price: $9.99</li>
-                <li>Artist: Van Gogh</li>
-                <li>Title: </li>
-                <li>Description: Self-portrait</li>
+                <li>Price: $752.000</li>
+                <li>Vendor: Andrés López</li>
+                <li>Title: Great paint</li>
+                <li>Description: My dreams</li>
             </ul>
             <button id="buyButton" class="btn btn-success">Buy!</button>
         </div>
@@ -58,5 +58,4 @@
             </form>
         </div>
     </div>
-    <div class="col-md-6">My assessment!</div>
 </div>
