--- a/AnaSProject/Views/_ViewImports.cshtml
+++ b/AnaSProject/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using AnaSProject.Controllers
 @using AnaSProject.ViewModels
+@using AnaSProject.Data.Entities
+
 @addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
