--- a/AnaSProject/Views/Shared/_Layout.cshtml
+++ b/AnaSProject/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <title>My Sana Assessment - @ViewBag.Title</title>
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/lib/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.min.css" rel="stylesheet" />
     <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
@@ -34,6 +35,7 @@
 
     <script src="~/lib/jQuery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="~/lib/bootstrap-switch/dist/js/bootstrap-switch.min.js"></script>
     <script src="~/js/index.js"></script>
     @RenderSection("scripts",false)
 </body>
