--- a/AnaSProject/Views/App/About.cshtml
+++ b/AnaSProject/Views/App/About.cshtml
@@ -15,7 +15,11 @@
     <li>Entity Framework Core</li>
     <li>Angular 5</li>
 </ul>
-<p>Notes:</p>
+<p>This is my database schema:</p><br/>
+<img src="~/img/ERDiagram_Sana_Assessment_CC1020726104.png"/>
+<br />
+<br />
+<p>Additional notes:</p>
 <ul>
     <li>The data requested as persistent storage is stored in a database whose -Connection String- must be configured in the file ~/config.json.</li>
     <li>A basic migration awaits the first execution of the application with some products.</li>
@@ -24,6 +28,6 @@
 <p>Finally I want to apologize to Cas for the late delivery of my test. I wish you like it. Best regards!</p>
 
 <!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/alanlopcu/AnaSProject/subscription" data-icon="octicon-eye" aria-label="Watch alanlopcu/AnaSProject on GitHub">Watch</a>
+<a class="github-button" href="https://github.com/alanlopcu/AnaSProject/" data-icon="octicon-eye" aria-label="Watch alanlopcu/AnaSProject on GitHub">Watch</a>
 <br><br>
 <p>Alvaro Andrés López C. <br> 57-3107887382 <br/><a href="mailto:alanlopcu@gmail.com">alanlopcu@gmail.com</a> .</p>
